# mio

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  mio.pc.in
.github/: codecov.yml
.github/workflows/: doc.yml  release.yml  test.yml
docs/: CMakeLists.txt  Doxyfile.in
docs/styles/: custom_footer.html  custom_header.html  extra_stylesheet.css
example/: CMakeLists.txt  example.cpp
include/: mio.hpp
include/mio/: mmap.hpp  page.hpp  shared_mmap.hpp
include/mio/detail/: mmap.ipp  string_util.hpp
single_include/mio/: mio.hpp
test/: CMakeLists.txt  benchmark-mio.cpp  benchmark_mio.cpp  benchmark_mmap.cpp  benchmark_shared_mmap.cpp  test-mio.cpp  test-mmap.cpp  test-page.cpp  test.cpp  test_mmap.cpp  test_mmap_source.cpp  test_page_size.cpp  test_shared_mmap.cpp
test/fixture/: create_test_file.hpp  fixture.hpp  print_benchmark_result.hpp
tools/: run-clang-format.bat  run-clang-format.sh  run-cppcheck.bat  run-cppcheck.sh  run-tests.bat  run-tests.sh
